--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Athens, Greece"
   employer         :
   pubmed           : 
-  googlescholar    :
+  googlescholar    : "https://scholar.google.com/citations?user=cRMQ4SAAAAAJ&hl=en&authuser=1"
   email            : "adreas@karabetian.gr"
   researchgate     : "https://www.researchgate.net/profile/Andreas-Karabetian"
   uri              :
