--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Andreas Karabetian"
 title_separator          : "-"
 name                     : &name "Andreas Karabetian"
 description              : &description "personal description"
-url                      : https://adreaskar.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://blog.karabetian.dev # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "adreaskar/adreaskar.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
