Updated personal details

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Andreas Karabetian"
   avatar           : "andreas-karabetian.jpg"
-  bio              : "Undergraduate Research Assistant at University of Piraeus"
+  bio              : "Research Assistant at University of Piraeus"
   location         : "Athens, Greece"
   employer         :
   pubmed           : 
