updated CV and avatar

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Andreas Karabetian"
-  avatar           : "andreas-karabetian.jpg"
+  avatar           : "me-bw.jpg"
   bio              : "Research Assistant at University of Piraeus"
   location         : "Athens, Greece"
   employer         :
